--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <meta property="og:title" content="Adcombo">
-<meta property="og:description" content="Adband">
-<meta property="og:image" content="https://w-dog.ru/wallpapers/10/2/559708865038090/gory-ozero-derevya.jpg">
+  <meta property="og:title" content="Metode Terbukti">
+<meta property="og:description" content="">
+<meta property="og:image" content="https://i.ibb.co/k4J5z0f/5-cm-dalam-12-hari-2022-07-26-T130442-205.png">
   <title>New Promotion</title>
   <meta name="description" content="Cold">
   <meta name="keywords" content="Nutrition">
