--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta property="og:title" content="Metode Terbukti">
 <meta property="og:description" content="">
-<meta property="og:image" content="https://i.ibb.co/k4J5z0f/5-cm-dalam-12-hari-2022-07-26-T130442-205.png">
+<meta property="og:image" content="https://vsegda-pomnim.com/uploads/posts/2022-03/1647327581_2-vsegda-pomnim-com-p-ozero-shirokoe-foto-2.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Cold">
   <meta name="keywords" content="Nutrition">
